changed hero image background attachment to scroll. Fixed was causing weird jitter on mobile.

--- a/in_development/static/assets/css/style.css
+++ b/in_development/static/assets/css/style.css
@@ -235,7 +235,7 @@ nav ul a:hover {
   background-size: cover;
   background-position: center;
   /* /* background-position: center;  */
-  background-attachment: fixed;
+  background-attachment: scroll;
 }
 
 .hero-image > div {
